# confluence-rs

./: Cargo.toml  LICENSE.md  README.md
src/: client.rs  errors.rs  lib.rs  macros.rs  model.rs  util.rs
src/content/: get.rs  mod.rs  model.rs  post.rs  put.rs
