[package]
name = "confluence"
version = "0.1.0"
authors = ["Sebastian Kaiser <sk4is3r@gmail.com>"]
edition = "2018"
homepage = "https://github.com/mttrbit/confluence-rs"
repository = "https://github.com/mttrbit/confluence-rs.git"
description = "Pure Rust bindings to Confluence API."
keywords = ["confluence", "api"]
readme = "README.md"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking", "cookies", "stream", "json"]}
serde_json = "1.0.59"
serde = { version = "1.0", features = ["derive"] }
error-chain = "0.12"
